--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ nav {
 /*page-5*/
 
 .container-5 {
+  margin-left: 100px;
   display: flex;
 }
 .container-5 .left-5 {
@@ -240,6 +241,7 @@ nav {
   margin-top: -8px;
 }
 .question-section {
+  margin-left: 100px;
   margin-top: -40px;
   height: 60%;
   width: 1090px;
@@ -271,7 +273,7 @@ nav {
 .elem p {
   padding-left: 29px;
   padding-right: 20px;
-  font-size: 14px;
+  font-size: 12px;
   color: #fff;
   letter-spacing: 2px;
 }
